:bug: Fix h1 spacing on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,8 +63,11 @@ h4 {
   font-weight: 700;
   margin-top: 2em;
 }
-h1 {
-  margin-top: 0;
+
+@container (min-width: 600px) {
+  h1 {
+    margin-top: 0;
+  }
 }
 
 p {
